@@ -4,6 +4,7 @@ rpmdevtools x.x (20xx-xx-xx)
   - bash completion improvements.
   - Make python_site* definitions in python spec template work with Python 3.
   - Make rpmdev-bumpspec work with Python 3.
+  - Initial rpmdev-rmdevelrpms Python 3 compatibility changes.
 
   Mads Kiilerich:
   - Fix pear_name definition in php-pear spec template (#528907).
